# TMC5160_Arduino

./: .gitignore  CMakeLists.txt
src/: SPIDevice.cpp  SPIDevice.h  TMC5160.cpp  TMC5160.h  TMC5160_SPI.cpp
